third_party/move/move-compiler-v2/tests/more-v1/parser/module_missing_lbrace.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/module_missing_lbrace.move:2:5
  │
2 │     fun f() {}
  │     ^^^
  │     │
  │     Unexpected 'fun'
  │     Expected '{'
